--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <div id="ruthPic"></div>
-    <div id="ruthQuote"></div>
+    <h1 id="ruthTitle">What would Ruth do?</h1>
+    <div class="ruthDiv" id="ruthPic"></div>
+    <div class="ruthDiv" id="ruthQuote"></div>
+
 
     <script>
 
@@ -37,13 +39,13 @@
             }
             let i = Math.floor(Math.random() * 5);
             let elem = document.createElement("h1");
-            let textNode = document.createTextNode(quotes[i]);
+            let textNode = document.createTextNode('"' + quotes[i] + '"');
             elem.appendChild(textNode)
             return ruthQuote.appendChild(elem)
         }
 
         setInterval(function () {
-            alert("Ruth would do it")
+            alert("Ruth would do It")
             newPic();
             newQuote();
         }, 1800000)
